# Distilled-Replay-DMatch

./: .gitignore  README.md  pyproject.toml
src/model/: cnn2.py  mlp2.py  wide_resnet.py
src/scifar10_exp/: config_dr.py  run.py
src/smnist_exp/: config_dr.py  config_dr_dmatch.py  config_naive.py  run.py
